app.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-v1
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
      - name: app-v1
        image: containous/traefikee-webapp-demo:v2
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  namespace: app
  labels:
    app: app-v1
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: app-v1
  selector:
    app: app-v1

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: app-v1
  namespace: app
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
    - "app.TRAEFIK_DOMAIN"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: app-v1
          port: 80
          kind: Service
