istio.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    istio-injection: enabled

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: traefik
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: app
  namespace: app
spec:
  selector:
    matchLabels:
      app: app-v1
  mtls:
    mode: STRICT
    # mode: PERMISSIVE

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app
spec:
  host: app-v1.app.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
